# cache

./: .gitignore  CMakeLists.txt  README.md  cache.cpp  cache.hpp  main.cpp
ideal/: CMakeLists.txt  e2e.cpp  idealcache.hpp  main.cpp
ideal/tests/: e2e.cpp  run_tests.sh  test01.in  test02.in  test03.in
lfu/: CMakeLists.txt  e2e.cpp  lfucache.hpp  main.cpp
tests/: e2e.cpp
